<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="collector" type="com.example.vinilosapp.models.Collector"/>
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="8dp"
        android:orientation="horizontal"
        android:radius="22dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/collector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/collector_image" />

        <TextView
            android:id="@+id/tv_collector_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:fontFamily="@font/montserrat"
            android:text="@{collector.name}"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/black"
            android:textColorLink="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</layout>