...
                android:text="@string/label_email"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/labelDynamicEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:paddingStart="8dp"
                android:paddingTop="3dp"
                android:paddingEnd="8dp"
...
                  android:paddingBottom="3dp"
                  android:text="@string/label_phone"
                  android:textColor="@color/black"
                  android:textSize="16sp"
                  android:textStyle="bold" />
            <TextView
                  android:id="@+id/labelDynamicPhone"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="@font/montserrat"
                  android:paddingStart="8dp"
                  android:paddingTop="3dp"
                  android:paddingEnd="16dp"
...
