...
    <item
        android:id="@+id/artistFragment"
        android:icon="@drawable/icon_artistas"
        android:title="@string/title_artists"/>

    <item
        android:id="@+id/collectorsFragment"
        android:icon="@drawable/icon_collector"
        android:title="@string/title_collectors"/>

</menu>
