...
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
        <Button
             android:id="@+id/associate_track_album_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center|center_vertical"
             android:layout_marginTop="15dp"
             android:minHeight="48dp"
             android:text="@string/btn_associate_track"
...
